infra/kubernetes/hml-platform-local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urbana-connect-hml-platform-local
  labels:
    app.kubernetes.io/part-of: urbana-connect-hml-platform-local
    environment: hml-platform-local
    non-production: "true"
