infra/kubernetes/hml-platform-local/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  labels:
    app.kubernetes.io/part-of: urbana-connect-hml-platform-local
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  labels:
    app.kubernetes.io/part-of: urbana-connect-hml-platform-local
spec:
  podSelector: {}
  policyTypes: ["Egress"]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-boundary
  labels:
    app.kubernetes.io/part-of: urbana-connect-hml-platform-local
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: urbana-connect
        - podSelector:
            matchLabels:
              app: mongodb-rs-init
      ports:
        - protocol: TCP
          port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-init-egress
  labels:
    app.kubernetes.io/part-of: urbana-connect-hml-platform-local
spec:
  podSelector:
    matchLabels:
      app: mongodb-rs-init
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb
      ports:
        - protocol: TCP
          port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-boundary
  labels:
    app.kubernetes.io/part-of: urbana-connect-hml-platform-local
spec:
  podSelector:
    matchLabels:
      app: urbana-connect
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: urbana-connect-hml-platform-local
      ports:
        - protocol: TCP
          port: 8081
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb
      ports:
        - protocol: TCP
          port: 27017
